# data-engineering-zoomcamp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
module-1-data-ingestion/: README.md  explore-ingestion.ipynb  pyproject.toml
module-1-data-ingestion/1-1-terraform-gcp/: README.md
module-1-data-ingestion/1-1-terraform-gcp/public_notes/: 1-1-1-notes.md  1-1-2-notes.md  1-1-3-notes.md
module-1-data-ingestion/1-1-terraform-gcp/terra-demo/: main.tf  varibles.tf
module-1-data-ingestion/1-2-2/: README.md  explore-ingestion.ipynb
module-1-data-ingestion/1-2-docker-sql/: 1-2-1-notes.md  1-2-2-notes.md  1-2-3-notes.md  1-2-4-notes.md  1-2-5-notes.md  1-2-6-notes.md  Dockerfile  Dockerfile.bak  README.md  docker-compose.yaml  ingest_data.py  pg-test-connection.ipynb
module-1-data-ingestion/1-2-docker-sql/1-2-2/: README.md  explore-ingestion.ipynb
module-1-data-ingestion/1-2-docker-sql/1-2-3/: README.md
module-1-data-ingestion/1-2-docker-sql/public_notes/: 1-2-1-notes.md  1-2-2-notes.md  1-2-3-notes.md  1-2-4-notes.md  1-2-5-notes.md  1-2-6-notes.md
module-1-data-ingestion/hw/: hw.md
module-1-data-ingestion/intro/: README.md  pipeline.py  pipeline_args.py
module-2-workflow-orchestration/: README.md  docker-compose.yml
module-2-workflow-orchestration/flows/: 2-2-1-flow.yml  2-2-6-2-flow.yml
module-2-workflow-orchestration/hw/: hw.md
module-2-workflow-orchestration/kestra/: README.md  docker-compose.yml
module-2-workflow-orchestration/public_notes/: 2-2-1-notes.md  2-2-2-notes.md  2-2-3-notes.md  2-2-4-notes.md  2-2-5-notes.md  2-2-6-notes.md  2-2-7-notes.md
module-3-data-warehouse/: README.md
module-3-data-warehouse/hw/: hw.md
module-3-data-warehouse/public_notes/: 3-1-1-notes.md  3-1-2-notes.md  3-2-1-notes.md  3-2-2-notes.md  3-3-1-notes.md  3-3-2-notes.md
module-4-analytics-engineering/: README.md
module-4-analytics-engineering/dbt-cloud-run/: README.md
module-4-analytics-engineering/dbt-core-run/: README.md  pyproject.toml
module-4-analytics-engineering/dbt-core-run/taxi_rides_ny/: dbt_project.yml
module-4-analytics-engineering/dbt-core-run/taxi_rides_ny/macros/: get_payment_type_description.sql
module-4-analytics-engineering/dbt-core-run/taxi_rides_ny/models/core/: dm_monthly_zone_revenue.sql  fact_trips.sql  schema.yml
module-4-analytics-engineering/dbt-core-run/taxi_rides_ny/models/staging/: base_staging_green_tripdata_2020_04_ext.sql  base_staging_yellow_tripdata_2020_04_ext.sql  schema.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
module-4-analytics-engineering/hw/: hw.md
module-4-analytics-engineering/public_notes/: 4-1-1-notes.md  4-1-2-notes.md  4-2-1-notes.md  4-2-2-notes.md  4-3-1-notes.md  4-3-2-notes.md  4-4-1-notes.md
module-5-batch-processing/: README.md  pyproject.toml
module-5-batch-processing/code/: 01_test.ipynb  02_pyspark.ipynb  03_schemas.ipynb  03_test.ipynb  04_pyspark.ipynb  04_spark_sql.ipynb  04_spark_sql_bq.py  05_group_by_join.ipynb  05_schemas.ipynb  06_rdd.ipynb  06_spark_sql.py  07_spark_gcs.ipynb  download_data.sh
module-5-batch-processing/hw/: hw.ipynb  hw.md
module-5-batch-processing/public_notes/: 5-1-1-notes.md  5-1-2-notes.md  5-1-notes.md  5-2-notes.md  5-3-notes.md  5-4-notes.md  5-5-notes.md
module-6-stream-processing/: README.md
module-6-stream-processing/pyflink/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  (+1 more)
workshops/dlt-pipeline/: .gitignore  dlt_explore.ipynb  docker-compose.yml  pyproject.toml
workshops/dlt-pipeline/1-workshop-exploring/: docker-compose.yml
workshops/workshop-1-dlt/: README.md  pyproject.toml
workshops/workshop-1-dlt/1-workshop-exploring/: README.md  dlt_explore.ipynb
workshops/workshop-1-dlt/hw/: hw.md
(+26 files in other folders)
