[project]
name = "module-1-data-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]


[tool.ruff]
line-length = 88
lint.select = ["F", "E", "W", "I"]
lint.ignore = []
# "F" - Pyflakes
# "E" - Error codes - PEP 8
# "W" - Warning codes - PEP 8
# "I" - Import sorting and unused imports
# See https://docs.astral.sh/ruff/rules/
