[project]
name = "module-1-data-ingestion"
version = "0.1.0"
description = "Module 1 - Data Ingestion"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pandas>=2.2.3",
    "pgcli>=4.1.0",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.37",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jedi>=0.19.2",
    "jupyter>=1.1.1",
    "pip>=24.3.1",
    "ruff>=0.9.2",
]


[tool.ruff]
line-length = 88
lint.select = ["F", "E", "W", "I"]
lint.ignore = []
# "F" - Pyflakes
# "E" - Error codes - PEP 8
# "W" - Warning codes - PEP 8
# "I" - Import sorting and unused imports
# See https://docs.astral.sh/ruff/rules/
