[project]
name = "workshop-1-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[bigquery,duckdb,postgres]>=1.6.1",
    "enlighten>=1.13.0",
    "streamlit>=1.42.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jedi>=0.19.2",
    "jupyter>=1.1.1",
    "ruff>=0.9.6",
]


[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I"]
lint.ignore = []
# "F" - Pyflakes
# "E" - Error codes - PEP 8
# "W" - Warning codes - PEP 8
# "I" - Import sorting and unused imports
# See https://docs.astral.sh/ruff/rules/
